2008-12-05  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22575
        Add a test for accessing NodeList items by name.

        * fast/dom/NodeList/nodelist-item-with-name-expected.txt: Added.
        * fast/dom/NodeList/nodelist-item-with-name.html: Added.

2008-12-05  Pamela Greene  <pam@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=22632
        Add a test for DOM operations with incompatible receivers or arguments.

        * fast/dom/incompatible-operations-expected.txt: Added.
        * fast/dom/incompatible-operations.html: Added.

2008-12-05  Justin Garcia  <justin.garcia@apple.com>

        Updating these test results.  On Tiger the fragment created from RTFD data 
        contained interchange newlines that we incorrectly handled before r38983.

        * platform/mac-tiger/editing/pasteboard/paste-RTFD-expected.checksum:
        * platform/mac-tiger/editing/pasteboard/paste-RTFD-expected.png:
        * platform/mac-tiger/editing/pasteboard/paste-RTFD-expected.txt:

2008-12-05  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Added a test for a bug I discovered while working on
        https://bugs.webkit.org/show_bug.cgi?id=22685.

        * fast/regex/non-capturing-backtracking-expected.txt: Added.
        * fast/regex/non-capturing-backtracking.html: Added.
        * fast/regex/resources/non-capturing-backtracking.js: Added.

2008-12-05  Dean Jackson  <dino@apple.com>

        Reviewed by David Hyatt.

        No longer need to add a fake listener on a document
        node in order to get events passed up to Window.
        https://bugs.webkit.org/show_bug.cgi?id=20572

        * transitions/transition-end-event-window.html:

2008-12-05  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim Hatcher.

        - Fix intermittent profiler test failures.  The problem is that idle