@@ -2,6 +2,17 @@
 
         Reviewed by Darin Adler.
 
+        https://bugs.webkit.org/show_bug.cgi?id=22592
+        Make sure the onload handler is only called once, even when there are
+        multiple <body> nodes in the document.
+
+        * fast/events/onload-fires-twice-expected.txt: Added.
+        * fast/events/onload-fires-twice.html: Added.
+
+2008-12-05  Pamela Greene  <pam@chromium.org>
+
+        Reviewed by Darin Adler.
+
         https://bugs.webkit.org/show_bug.cgi?id=22575
         Add a test for accessing NodeList items by name.
 
